# fuw_frontend

./: .gitignore  1_Test.xls  pyproject.toml
fuw_frontend/: __init__.py  calculation.py  main.py  presenter.py  pyproject.toml  saveExls.py  scripts.py
fuw_frontend/Model/: __init__.py  calculation.py  model.py
fuw_frontend/fuw_frontend/: __init__.py  main.py
fuw_frontend/fuw_frontend/Model/: model.py  presenter.py
fuw_frontend/fuw_frontend/views/: __init__.py  measurementView.py  menu.py  utils.py  views.py  views.ui
fuw_frontend/views/: CreateExperementView.py  Dialogs.py  ExperementListView.py  ResultView.py  __init__.py  measurementView.py  menu.py  utils.py  views.py  views.ui
save/: 1_Test.json  2_dhjkf.json  3_.json
tests/: test_fuw_frontend.py
