[tool.poetry]
name = "fuw_frontend"
version = "0.1.0"
description = ""
authors = ["kzemskyy <kostya.zemskyy@h2i.sg>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyqt6 = "^6.5.3"
PySide6 = "^6.6.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyqt6 = "^6.5.3"
PySide6 = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts:test"